--- a/bubbleshowcase/gradle/wrapper/gradle-wrapper.properties
+++ b/bubbleshowcase/gradle/wrapper/gradle-wrapper.properties
@@ -1,4 +1,4 @@
-#Tue Sep 04 15:24:44 CEST 2018
+#Mon Jun 24 13:38:22 EEST 2019
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
 zipStoreBase=GRADLE_USER_HOME
